syntax = "proto3";

package pb;

option go_package = "watcher-by-etcd-and-sync-to-other-module/pb";

message UserProto {
  // 用户名
  string name = 1;

  // 年龄
  int32 age = 2;
}